Revision history for Perl extension Finance-Robinhood

{{$NEXT}}

0.05 2016-04-04T01:53:58Z

    - Get watchlist by name with ::Robinhood->watchlist(...)
    - ::Robinhood->delete_watchlist(...) can now delete watchlist by name or with object
    - Fix: API to bulk add symbols to watchlist supports 32 max per call

0.04 2016-04-02T16:21:13Z

    - Test making a buy order in t/05_buy.t
    - Fix bug randomly preventing ::Order re-creation

0.03 2016-04-01T21:55:25Z

    - Major documentation update
    - Order type cheat sheet in Finance::Robinhood::Order
    - Gather historical data on a security with Finance::Robinhood::historicals(...) or with ::Instrument->historicals(...)
    - Access current and historical portfolio data for ::Account objects

0.02 2016-03-31T19:26:04Z

    - New demo script: eg/buy.pl
    - Buy and Sell orders are now made by directly calling Finance::Robinhood::Order->new(...)
    - Orders are cancelled with $order->cancel()
    - Support for initiating and completing a password reset request
    - Loads of user information methods
    - Document Finance::Robinhod::Instrument
    - Gather stock's fundamentals with aptly named ::Instrument->fundamentals()
    - Require IO::Socket::SSL and perl 5.12+
    - Note: I'm narrowing it down but the API will still be subject to change!

0.01 2016-03-26T23:35:04Z

    - First public release
    - This is an alpha dist. The API will be subject to change!